[project]
name = "pv2mqtt"
version = "0.1.0"
requires-python = ">= 3.13"

dependencies = [
    "annotated-types~=0.5",
    "paho-mqtt~=2.0",
    "pydantic~=2.11",
    "pyflakes~=3.1",
    "pyserial~=3.5",
    "pysunspec2~=1.2",
    "PyYAML~=6.0",
    "types-PyYAML~=6.0",
    "typing_extensions~=4.7",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.9",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

select = ["E4", "E7", "E9", "F", "I", "C901"]
ignore = []

[tool.ruff.lint.isort]
no-sections = true
